	  MONSTERCOLOR=acid blob:lightcyan
	* Fixed crashes when attacking long worms on flipped levels
	* HTML dump: output IBMgraphics and DECgraphics characters
	* HTML dump: fix crash if monster name is too long
	* Multiple bones files per level (not on Win32)
	* Autoconf compliant installation directory variables
	* added new tiles and fixed building of 16x16 tiles (by Stephan T. Lavavej)

	* more candles:
	  - lighting shop in orcus town
	  - Gnomes get candles (more likely in dark mines) (from AceHack)

	* patches:
	  - DYWYPISI? (by Jafet)
	  - MSGTYPE option (by Pasi Kallinen)
	  - Sortloot (by Jukka Lahtinen)
	  - Quiver Fired Ammunition (by Jukka Lahtinen)

	* user interface improvements:
	  - Autoexplore (from AceHack)
	  - New category menu option: "Unidentified items"
	  - 'X' toggles twoweaponing, explore mode is on alt-x resp. #xplore
	  - BUC items inside containers dropped on altars (from AceHack)
	  - stairs leading to branches are colored yellow
	  - inventory improvement: generic item usage menu (from AceHack)
	  - visualized HP bar(hitpointbar) activated by default
	  - visual indicator showing which spells can be refreshed (from K-Mod)
	  - show level annotation when entering level (idea by Chris Smith)
	  - refreshing spells is allowed at all time (with prompt) (from AceHack)

	* new dungeon features:
	  - dead trees (from NetHack Brass)

	* vanilla bug fixes:
	  - C343-74, C343-198

2010-09-04  UnNetHack 3.5.3
	* Conflict makes blackmarket shopkeeper angry
	* Fully eroded armor gets destroyed
	* Lowered the needed experience level for the quest
	* HTML dump
	* Pi day support
	* Reduced Sokoban branch by one level
	* Vampires as player selectable starting race (from Slash'Em)
	* Remove instadeath poison, reduce hp and maxhp instead (from SporkHack)

	* patches:
	  - Conduct: Elbereth tracking (by Ray Kulhanek)
	  - Dungeon Map Overview 3 (by Hojita Discordia)
	  - Extended Conducts v2.3 (by Andreas Dorn)
	  - Paranoid Patch (by various)