@@ -15,5 +15,7 @@ void curses_init_options(void);
 
 void curses_display_splash_window(void);
 
+void curses_cleanup(void);
+
 
 #endif  /* CURSINIT_H */
