@@ -7,6 +7,7 @@
 	* Multiple bones files per level (not on Win32)
 	* Autoconf compliant installation directory variables
 	* added new tiles and fixed building of 16x16 tiles (by Stephan T. Lavavej)
+	* Curses GUI updated to last version
 
 	* more candles:
 	  - lighting shop in orcus town
